--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title id="mainTitle" class="center large">HannahArnold's Portfolio</title>
-  <link rel="stylesheet" href="css/main.scss" />
+  <link rel="stylesheet" href="css/main.css" />
 </head>
 <STYLE>
   A {
